--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+#container {
+    display:flex;
+}
+
 .cell {
-    border-width: 10px;
-    border-color: black;
-    width: 100px;
-    height: 100px;
-    margin: 10px;
+    border: 2px solid black;
+    width: 35px;
+    height: 35px;
 }
